complete wiki search

--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Template</title>
+        <title>Wiki articles</title>
         <meta charset="utf-8" />
-        <link href="css/mainstyle.css" rel="stylesheet"/>
+        <link href="css/mainstyle.css" rel="stylesheet" />
+        <link href="https://fonts.googleapis.com/css?family=Bangers|Alice|Pacifico" rel="stylesheet">
     </head>
     <body>
         <div id="main"></div>
